--- a/widget.html
+++ b/widget.html
@@ -35,37 +35,56 @@
 
 <body>
 
-    <div id="com-chilipeppr-widget-macro" class="panel panel-default">
+    <div id="com-chilipeppr-widget-luaeditor" class="panel panel-default">
         <div class="panel-heading">
 
-            <span class="panel-title" data-toggle="popover" data-original-title="" title="">Macros</span>
+            <span class="panel-title" data-toggle="popover" data-original-title="" title="">Lua Editor</span>
 
             <div class="btn-group pull-right" style="margin-right:0;">
                 <div class="dropdown">
                     <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown" data-original-title="" title=""><span class="caret"></span></button>
-                    <ul class="dropdown-menu dropdown-menu-main xdropdown-menu-right" role="menu">
-                        <li role="presentation" class="dropdown-header recent-files">Recent Macros</li>
-                        <li><a href="javascript:" class="recent-file-delete"><span class="glyphicon glyphicon-trash"></span> Clear Macros</a></li>
+                    <ul class="dropdown-menu dropdown-menu-fork xdropdown-menu-right" role="menu">
 
-                        <!--<li class="divider"></li>-->
-                        <!--<li role="presentation" class="dropdown-header fork-name">com-chilipeppr-widget-macro</li>-->
-                        <!--<li><a href="javascript:" class="pubsublink">PubSub for this Widget</a></li>-->
-                        <!--<li><a href="http://fiddle.jshell.net/chilipeppr/ZJ5vV/show/light/" target="_blank" class="standalone">View Widget Standalone</a></li>-->
-                        <!--<li><a href="http://jsfiddle.net/chilipeppr/ZJ5vV/" target="_blank" class="fork">Fork Widget</a></li>-->
                     </ul>
                 </div>
             </div>
 
             <div class="btn-toolbar pull-right" role="toolbar" style="margin-right:6px;">
 
+                <div class="btn-group" style="margin-right:6px;">
+                    <button type="button" id="" class="btn btn-xs btn-default luaeditor-run" data-container="body" data-toggle="popover" data-placement="auto" data-content="Run the macro. Ctrl+Enter is the shortcut which is quite handy." data-trigger="hover"
+                    data-delay="800" data-original-title="" title=""> Run <span class="glyphicon glyphicon-play"></span>
+                    </button>
+                </div>
+    
+                <div class="btn-group" style="margin-right:6px;">
+                    <button type="button" id="" class="btn btn-xs btn-default luaeditor-save" data-container="body" data-toggle="popover" data-placement="auto" data-content="Save the macro. Saved files are available in pulldown on right." data-trigger="hover"
+                    data-delay="800" data-original-title="" title=""> <span class="glyphicon glyphicon-floppy-disk"></span>
+                    </button>
+                </div>
+
+
                 <div class="btn-group">
                     <div class="dropdown">
-                        <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown" data-original-title="" title="">Startup <span class="caret"></span></button>
-                        <ul class="dropdown-menu" role="menu">
-                            <li role="presentation" class="dropdown-header">Startup Macro (Add ?nostartup=true to URL to bypass)</li>
-                            <li><a href="javascript:" class="com-chilipeppr-widget-macro-startup-load">Edit the Startup Macro</a></li>
-                            <li><a href="javascript:" class="com-chilipeppr-widget-macro-startup-save">Save the Startup Macro</a></li>
-                            <!-- <li role="presentation" class="divider com-chilipeppr-widget-macro-startup-save"></li> -->
+                        <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown" data-original-title="" 
+                        title=""><span class="glyphicon glyphicon-file"></span> <span class="caret"></span></button>
+                        <ul class="dropdown-menu dropdown-menu-files xdropdown-menu-right" role="menu">
+                            <li role="presentation" class="dropdown-header recent-files">Recent Scripts</li>
+                            <li><a href="javascript:" class="recent-file-delete"><span 
+                            class="glyphicon glyphicon-trash"></span> Clear Scripts</a></li>
+    
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="btn-group">
+                    <div class="dropdown">
+                        <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown" data-original-title="" 
+                        title="">init.lua <span class="caret"></span></button>
+                        <ul class="dropdown-menu dropdown-luaeditor-startup" role="menu">
+                            <li role="presentation" class="dropdown-header">Startup init.lua Script</li>
+                            <li><a href="javascript:" class="luaeditor-startup-load">Edit the init.lua Script</a></li>
+                            <li><a href="javascript:" class="luaeditor-startup-save">Save the init.lua Script</a></li>
                         </ul>
                     </div>
 
@@ -73,7 +92,9 @@
 
                 <div class="btn-group">
                     <div class="dropdown">
-                        <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown" data-original-title="" title=""><span class="glyphicon glyphicon-book"></span> <span class="caret"></span></button>
+                        <button type="button" class="btn btn-xs btn-default dropdown-toggle" 
+                        data-toggle="dropdown" data-original-title="" 
+                        title=""><span class="glyphicon glyphicon-book"></span> <span class="caret"></span></button>
                         <ul class="dropdown-menu dropdown-sample-macros" role="menu">
                             <li role="presentation" class="dropdown-header recent-files">Sample Macros</li>
                             <li><a href="javascript:" class="com-chilipeppr-widget-macro-sample sample-alert">Alert Box</a></li>
@@ -130,27 +151,16 @@
 
             </div>
 
-            <div class="btn-group pull-right" style="margin-right:6px;">
-                <button type="button" id="" class="btn btn-xs btn-default com-chilipeppr-widget-macro-save" data-container="body" data-toggle="popover" data-placement="auto" data-content="Save the macro. Saved files are available in pulldown on right." data-trigger="hover"
-                data-delay="800" data-original-title="" title=""> <span class="glyphicon glyphicon-floppy-disk"></span>
-                </button>
-            </div>
-
-            <div class="btn-group pull-right" style="margin-right:6px;">
-                <button type="button" id="" class="btn btn-xs btn-default com-chilipeppr-widget-macro-run" data-container="body" data-toggle="popover" data-placement="auto" data-content="Run the macro. Ctrl+Enter is the shortcut which is quite handy." data-trigger="hover"
-                data-delay="800" data-original-title="" title=""> Run <span class="glyphicon glyphicon-play"></span>
-                </button>
-            </div>
 
         </div>
-        <div id="com-chilipeppr-widget-macro-body" class="panel-body">
+        <div class="panel-body">
 
-            <textarea class="form-control com-chilipeppr-widget-macro-jscript" placeholder="Enter Javascript Here. Press Run in toolbar to eval Javascript. Ctrl+Enter is shortcut for run." spellcheck="false" rows="5"></textarea>
+            <textarea class="form-control luaeditor-maineditor" placeholder="Enter Lua code Here. Press Run in toolbar to send the Lua script to the selected serial port. Ctrl+Enter is shortcut for run." spellcheck="false" rows="5"></textarea>
 
 
         </div>
-        <div id="com-chilipeppr-widget-macro-ftr" class="panel-footer">
-            <textarea id="com-chilipeppr-widget-macro-status" class="widget-status form-control" rows="3">To place text here call macro.status("your text");</textarea>
+        <div class="panel-footer">
+            <textarea class="luaeditor-status form-control" rows="3">Status...</textarea>
         </div>
     </div>
 
