--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -84,7 +84,7 @@ cpdefine("inline:com-chilipeppr-widget-luaeditor", ["chilipeppr_ready", /* other
          * The ID of the widget. You must define this and make it unique.
          */
         id: "com-chilipeppr-widget-luaeditor", // Make the id the same as the cpdefine id
-        name: "Widget / Macro", // The descriptive name of your widget.
+        name: "Widget / Lua Editor", // The descriptive name of your widget.
         desc: "Edit and run Lua code. Lots of sample Lua code too.", // A description of what your widget does
         url: "http://raw.githubusercontent.com/chilipeppr/widget-luaeditor/master/auto-generated-widget.html",       // The final URL of the working widget as a single HTML file with CSS and Javascript inlined. You can let runme.js auto fill this if you are using Cloud9.
         fiddleurl: "http://ide.c9.io/chilipeppr/widget-luaeditor", // The edit URL. This can be auto-filled by runme.js in Cloud9 if you'd like, or just define it on your own to help people know where they can edit/fork your widget
