--- a/widget.html
+++ b/widget.html
@@ -52,13 +52,16 @@
             <div class="btn-toolbar pull-right" role="toolbar" style="margin-right:6px;">
 
                 <div class="btn-group" style="margin-right:6px;">
-                    <button type="button" id="" class="btn btn-xs btn-default luaeditor-run" data-container="body" data-toggle="popover" data-placement="auto" data-content="Run the macro. Ctrl+Enter is the shortcut which is quite handy." data-trigger="hover"
+                    <button type="button" id="" class="btn btn-xs btn-default luaeditor-run" 
+                    data-container="body" data-toggle="popover" data-placement="auto" data-content="Run the script. Ctrl+Enter is the shortcut which is quite handy." data-trigger="hover"
                     data-delay="800" data-original-title="" title=""> Run <span class="glyphicon glyphicon-play"></span>
                     </button>
                 </div>
     
                 <div class="btn-group" style="margin-right:6px;">
-                    <button type="button" id="" class="btn btn-xs btn-default luaeditor-save" data-container="body" data-toggle="popover" data-placement="auto" data-content="Save the macro. Saved files are available in pulldown on right." data-trigger="hover"
+                    <button type="button" id="" class="btn btn-xs btn-default luaeditor-save" 
+                    data-container="body" data-toggle="popover" data-placement="auto" 
+                    data-content="Save the script. Saved files are available in pulldown on right." data-trigger="hover"
                     data-delay="800" data-original-title="" title=""> <span class="glyphicon glyphicon-floppy-disk"></span>
                     </button>
                 </div>
