--- a/widget.html
+++ b/widget.html
@@ -98,7 +98,7 @@
                         <button type="button" class="btn btn-xs btn-default dropdown-toggle" 
                         data-toggle="dropdown" data-original-title="" 
                         title=""><span class="glyphicon glyphicon-book"></span> <span class="caret"></span></button>
-                        <ul class="dropdown-menu dropdown-sample-macros" role="menu">
+                        <ul class="dropdown-menu dropdown-sample-macros dropdown-menu-right" role="menu">
                             <li role="presentation" class="dropdown-header recent-files">Sample Macros</li>
                             <li><a href="javascript:" class="com-chilipeppr-widget-macro-sample sample-alert">Alert Box</a></li>
                             <li><a href="javascript:" class="com-chilipeppr-widget-macro-sample sample-status">Show Status</a></li>
