--- a/widget.html
+++ b/widget.html
@@ -182,6 +182,14 @@
                         Run File
                         <span class="glyphicon glyphicon-play"></span>
                     </button>
+                    
+                    <button class="btn btn-default btn-filedump" type="button"
+                        data-container="body" data-toggle="popover" 
+                        data-placement="auto" data-trigger="hover"
+                        data-content="Dump contents of the file to the console." 
+                        data-delay="800">
+                        <span class="glyphicon glyphicon-eye-open"></span>
+                    </button>
                     <!--<button class="btn btn-default" type="button">-->
                     <!--    Download -->
                     <!--    <span class="glyphicon glyphicon-floppy-save"></span>-->
