--- a/widget.html
+++ b/widget.html
@@ -187,8 +187,15 @@
                         data-container="body" data-toggle="popover" 
                         data-placement="auto" data-trigger="hover"
                         data-content="Dump contents of the file to the console." 
-                        data-delay="800">
+                        data-delay="1000">
                         <span class="glyphicon glyphicon-eye-open"></span>
+                    </button>
+                    <button class="btn btn-default btn-filedelete" type="button"
+                        data-container="body" data-toggle="popover" 
+                        data-placement="auto" data-trigger="hover"
+                        data-content="Delete the file.lua and file.lc" 
+                        data-delay="1000">
+                        <span class="glyphicon glyphicon-trash"></span>
                     </button>
                     <!--<button class="btn btn-default" type="button">-->
                     <!--    Download -->
