--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -874,7 +874,7 @@ cpdefine("inline:com-chilipeppr-widget-luaeditor", ["chilipeppr_ready", /* other
 
             </div>
             
-            <div class="alert-dismissible alert alert-devicefilename" role="alert" 
+            <div class="alert-dismissible alert alert-devicefilename hidden" role="alert" 
             style="padding:8px 0 0 0; margin:0 0 0 -4px;">
                 <button type="button" class="close hidden" data-dismiss="alert" aria-label="Close" style="padding-left:10px">
                     <span aria-hidden="true">&times;</span>
