--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -163,6 +163,7 @@ cpdefine("inline:com-chilipeppr-widget-luaeditor", ["chilipeppr_ready", /* other
             // see if startup script
             //.setupStartup();
             
+            
             console.log(this.name + " done loading.");
         },
         /**
@@ -926,10 +927,7 @@ cpdefine("inline:com-chilipeppr-widget-luaeditor", ["chilipeppr_ready", /* other
 
             <textarea class="form-control luaeditor-maineditor" 
             placeholder="Enter Lua code Here. Press Run in toolbar to send the Lua script to the selected serial port. Ctrl+Enter is shortcut for run." 
-            spellcheck="false" rows="5">
-print("hello")
-print('world')
-            </textarea>
+            spellcheck="false" rows="5"></textarea>
 
 
         </div>
