--- a/widget.html
+++ b/widget.html
@@ -215,10 +215,7 @@
 
             <textarea class="form-control luaeditor-maineditor" 
             placeholder="Enter Lua code Here. Press Run in toolbar to send the Lua script to the selected serial port. Ctrl+Enter is shortcut for run." 
-            spellcheck="false" rows="5">
-print("hello")
-print('world')
-            </textarea>
+            spellcheck="false" rows="5"></textarea>
 
 
         </div>
