--- a/widget.html
+++ b/widget.html
@@ -213,10 +213,11 @@
         </div>
         <div class="panel-body">
 
-            <textarea class="form-control luaeditor-maineditor" 
-            placeholder="Enter Lua code Here. Press Run in toolbar to send the Lua script to the selected serial port. Ctrl+Enter is shortcut for run." 
-            spellcheck="false" rows="5"></textarea>
+            <!--<textarea class="form-control luaeditor-maineditor hidden" -->
+            <!--placeholder="Enter Lua code Here. Press Run in toolbar to send the Lua script to the selected serial port. Ctrl+Enter is shortcut for run." -->
+            <!--spellcheck="false" rows="5"></textarea>-->
 
+            <div id="editor" class="luaeditor-maineditor"></div>
 
         </div>
         <div class="panel-footer">
