--- a/widget.html
+++ b/widget.html
@@ -72,14 +72,22 @@
                     </button>
                 </div>
 
-                <div class="btn-group xpull-right" xstyle="margin-right:6px;">
+                <div class="btn-group xpull-right hidden" xstyle="margin-right:6px;">
                     <button type="button" id="" class="btn btn-xs btn-default luaeditor-uploadrun" 
                     data-container="body" data-toggle="popover" data-placement="auto" data-content="Upload the script to the device first as a file. Then compile the file on the device. Then run the file. You must provide a name for the file." data-trigger="hover"
                     data-delay="1000" data-original-title="" title=""> Upload > Run <span class="glyphicon glyphicon-upload"></span>
                     </button>
                 </div>
 
+
                 <div class="btn-group xpull-right" xstyle="margin-right:6px;">
+                    <button class="btn btn-default btn-xs btn-filerename" type="button"
+                        data-container="body" data-toggle="popover" 
+                        data-placement="auto" data-trigger="hover"
+                        data-content="Rename the file." 
+                        data-delay="1000">
+                        Rename <span class="hidden glyphicon glyphicon-edit"></span>
+                    </button>
                     <button type="button" id="" class="btn btn-xs btn-default luaeditor-save" 
                     data-container="body" data-toggle="popover" data-placement="auto" 
                     data-content="Save the script. Saved files are available in pulldown on right." data-trigger="hover"
@@ -172,7 +180,7 @@
 
             </div>
             
-            <div class="alert-dismissible alert alert-devicefilename hidden" role="alert" 
+            <div class="alert-dismissible alert alert-devicefilename" role="alert" 
             style="padding:8px 0 0 0; margin:0 0 0 -4px;">
                 <button type="button" class="close hidden" data-dismiss="alert" aria-label="Close" style="padding-left:10px">
                     <span aria-hidden="true">&times;</span>
@@ -205,13 +213,6 @@
                         data-content="Delete the file.lua and file.lc" 
                         data-delay="1000">
                         <span class="glyphicon glyphicon-trash"></span>
-                    </button>
-                    <button class="btn btn-default btn-filerename" type="button"
-                        data-container="body" data-toggle="popover" 
-                        data-placement="auto" data-trigger="hover"
-                        data-content="Rename the file." 
-                        data-delay="1000">
-                        Rename <span class="hidden glyphicon glyphicon-edit"></span>
                     </button>
                     <!--<button class="btn btn-default" type="button">-->
                     <!--    Download -->
