--- a/widget.html
+++ b/widget.html
@@ -109,6 +109,16 @@
                         </ul>
                     </div>
                 </div>
+                
+                <div class="btn-group xpull-right" xstyle="margin-right:6px;">
+                    <button class="btn btn-default btn-xs btn-resize" type="button"
+                        data-container="body" data-toggle="popover" 
+                        data-placement="auto" data-trigger="hover"
+                        data-content="Resize the editor." 
+                        data-delay="1000">
+                        <span class="glyphicon glyphicon-fullscreen"></span>
+                    </button>
+                </div>
 
                 <div class="btn-group xpull-right hidden">
                     <div class="dropdown">
