--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -475,7 +475,7 @@ l = nil
                 //editor.getSession().setMode("ace/mode/lua");
                 this.editor.getSession().setTabSize(2);
                 this.editor.getSession().setUseSoftTabs(true);
-                this.editor.getSession().setUseWrapMode(true);
+                //this.editor.getSession().setUseWrapMode(true);
                 this.editor.getSession().setUndoManager(new ace.UndoManager());
                 
                 /*
