--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -20,6 +20,7 @@
 
 #com-chilipeppr-widget-luaeditor {
    /*margin: 20px;*/
+   margin-bottom:0;
 }
 
 #com-chilipeppr-widget-luaeditor .panel-body {
