--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -1369,6 +1369,7 @@ l = nil
             var logEl = $('#' + this.id + ' #' + this.aceId);
             var loght = logEl.height();
             logEl.height(loght + delta - 13);
+            if (this.editor) this.editor.resize();
         },
         loadJscript: function(txt) {
             //this.jscript = txt;
