--- a/widget.html
+++ b/widget.html
@@ -44,7 +44,7 @@
             <div class="btn-toolbar xpull-right" role="toolbar" style="margin-right:6px;">
 
             <div class="panel-title pull-left" data-toggle="popover" 
-            data-original-title="" title="" style="padding-right:10px">Lua&nbsp;Editor</div>
+            data-original-title="" title="" style="padding-right:10px">Lua&nbsp;Editor by John</div>
 
 
                 <div class="btn-group pull-right" style="margin-right:0;">
