--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -202,8 +202,8 @@ cpdefine("inline:com-chilipeppr-widget-luaeditor", ["chilipeppr_ready", "aceAuto
          * The ID of the widget. You must define this and make it unique.
          */
         id: "com-chilipeppr-widget-luaeditor", // Make the id the same as the cpdefine id
-        name: "Widget / Lua Editor", // The descriptive name of your widget.
-        desc: "Edit and run Lua code with a multi-file editor. Save locally or upload/run remotely on the Lua device.", // A description of what your widget does
+        name: "Widget / Lua Editor for John1", // The descriptive name of your widget.
+        desc: "John1 - Edit and run Lua code with a multi-file editor. Save locally or upload/run remotely on the Lua device.", // A description of what your widget does
         url: "http://raw.githubusercontent.com/johnlauer/widget-luaeditor/master/auto-generated-widget.html",       // The final URL of the working widget as a single HTML file with CSS and Javascript inlined. You can let runme.js auto fill this if you are using Cloud9.
         fiddleurl: "http://ide.c9.io/johnlauer/widget-luaeditor", // The edit URL. This can be auto-filled by runme.js in Cloud9 if you'd like, or just define it on your own to help people know where they can edit/fork your widget
         githuburl: "http://github.com/johnlauer/widget-luaeditor", // The backing github repo
@@ -1504,7 +1504,7 @@ l = nil
             <div class="btn-toolbar xpull-right" role="toolbar" style="margin-right:6px;">
 
             <div class="panel-title pull-left" data-toggle="popover" 
-            data-original-title="" title="" style="padding-right:10px">Lua&nbsp;Editor</div>
+            data-original-title="" title="" style="padding-right:10px">Lua&nbsp;Editor by John</div>
 
 
                 <div class="btn-group pull-right" style="margin-right:0;">
